# flaskextensions.com

./: .all-contributorsrc  .dockerignore  .env-example  .example.variables.env  .gitignore  AUTHORS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  roadmap.md
.github/workflows/: ci.yml  health_check.yml  pull_request.yml
consumer/: pyproject.toml  settings.toml
consumer/consumer/: cli.py  cli_dataset.py
consumer/tests/: test_consumer.py
deploy/: ansible.cfg  deploy.yaml  hosts  hosts.example
docker/api/: Dockerfile
docker/service/: Dockerfile
docker/ui/: Dockerfile
docs/design/: LayOut.xd  Logo.psd  Logo.xd
fexapi/: .env  mypy.ini  pyproject.toml  settings.toml
fexapi/fexapi/: api.py  config.py  db.py  models.py  queries.py
fexapi/tests/: test_fexapi.py
fexservice/: .env  .example.secrets.toml  pyproject.toml  settings.toml
fexservice/fexservice/: cli.py  config.py  consumer.py  exception.py  validator.py
fexui/: about.html  custom.css  index.html
fexui/css/: bulma.css  custom.css
fexui/js/: main.js
service/: cli_sqla.py  mypy.ini  pyproject.toml  settings.toml
service/fexservice/: cli.py  consumer.py  exception.py  logger.py  validator.py
service/tests/: test_service.py
