[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
