[tool.poetry]
name = "fexapi"
version = "0.1.0"
description = ""
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.54.1", extras = ["all"]}
databases = "^0.2.6"
asyncpg = "^0.20.1"
psycopg2 = "^2.8.5"
dynaconf = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7.9"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
