[tool.poetry]
name = "fexapi"
version = "0.1.0"
description = ""
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.54.1", extras = ["all"]}
databases = "^0.2.6"
asyncpg = "^0.20.1"
dynaconf = "^2.2.3"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770.0"
towncrier = "^19.2.0"
aiosqlite = "^0.12.0"

[tool.towncrier]
package = "changes"
directory = "changes/"
filename = "../CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/flask-extensions/flaskextensions.com/issues/{issue}>`_"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

